@@ -24,12 +24,18 @@ t/00-compile/lib_Dist_Zilla_Plugin_if_not_pm.t
 t/00-compile/lib_Dist_Zilla_Plugin_if_pm.t
 t/00-report-prereqs.dd
 t/00-report-prereqs.t
-t/env-disable.t
-t/no-plugin.t
-t/pass-args.t
-t/plugin-doublelevel.t
-t/plugin-only-2.t
-t/plugin-only.t
+t/if/env-disable.t
+t/if/no-plugin.t
+t/if/pass-args.t
+t/if/plugin-doublelevel.t
+t/if/plugin-only-2.t
+t/if/plugin-only.t
+t/ifnot/env-disable.t
+t/ifnot/no-plugin.t
+t/ifnot/pass-args.t
+t/ifnot/plugin-doublelevel.t
+t/ifnot/plugin-only-2.t
+t/ifnot/plugin-only.t
 weaver.ini
 xt/author/critic.t
 xt/release/cpan-changes.t
