@@ -1,4 +1,9 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001001
+ [Added / runtime requires]
+ - Dist::Zilla::Role::PluginLoader::Configurable
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Role::PrereqSource
 
